tests/core/snapshots/yaml-union.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

input T1Input {
  t1: String
}

input T2Input {
  t2: Int
}

input T3Input {
  t3: Boolean
  t33: Float!
}

union U = T1 | T2 | T3

type NNU {
  nu: NU
}

type NU {
  u: U
}

type Query {
  testVar0(u: T1Input!): U @http(url: "http://localhost/users/{{args.u}}/")
  testVar1(u: T2Input!): U @http(url: "http://localhost/users/{{args.u}}/")
  testVar2(u: T3Input!): U @http(url: "http://localhost/users/{{args.u}}/")
}

type T1 {
  t1: String
}

type T2 {
  t2: Int
}

type T3 {
  t3: Boolean
  t33: Float!
}
